Fix colour contrast

--- a/app/assets/stylesheets/core/containers.scss
+++ b/app/assets/stylesheets/core/containers.scss
@@ -6,10 +6,10 @@
 }
 
 .viewersIndicator {
-  color: $dusty-rose;
+  color: $eggplant;
   font-weight: bold;
-  border: $size-1 solid $dusty-rose !important;
-  box-shadow: 0 0 $size-2 $dusty-rose inset !important;
+  border: $size-1 solid $eggplant !important;
+  box-shadow: 0 0 $size-2 $eggplant inset !important;
   padding: $size-10;
 }
 
