--- a/app/assets/stylesheets/dashboard/dashboard_nav.scss
+++ b/app/assets/stylesheets/dashboard/dashboard_nav.scss
@@ -19,7 +19,7 @@
     }
     &Active {
       background: $white-70 !important;
-      color: $mulberry-70 !important;
+      color: $black !important;
     }
     @media screen and (max-width: $medium) {
       text-align: center;
